# team-part

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: full-demo-team_mailbox.db  full_demo.db
examples/: basic_example.py  full_demo.py  qps_bench.py
examples/data/: full-demo-team_mailbox.db  full_demo.db
src/agent_team/: __init__.py  __main__.py  hooks.py  llm_agent.py  llm_provider.py  mailbox.py  notifications.py  observability.py  orchestrator.py  planning.py  profiles.py  tasks.py  token_tracker.py  tools.py
